--- a/index.html
+++ b/index.html
@@ -4,12 +4,106 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Pig App v2</title>
   </head>
   <body>
     <div id="app">
+      <div class="bg-gray-800 w-full h-screen flex items-center justify-center relative">
+            <div class="bg-gray-500 w-11/12 h-5/6 lg:w-2/3 lg:h-5/6 flex flex-col lg:flex-row">
 
+                <!-- player 1's section-->
+                <div class="player-section" id="player-0">
+                    <div class="player-1-name text-2xl lg:text-3xl font-light uppercase">
+                        Player 1
+
+                    </div>
+
+                    <div class="global-score-0 text-4xl lg:text-7xl font-thin mt-2 lg:mt-4 text-blue-600">58</div>
+
+                    <div class="current-score-0 flex flex-col items-center bg-blue-600 rounded-sm px-6 py-2 mt-6 lg:mt-20">
+                        <div class="title text-gray-800 text-sm">Current</div>
+                        <div class="score text-gray-100 text-2xl">30</div>
+                    </div>
+                </div>
+
+                <!-- player 2's section -->
+                <div class="player-section" id="player-1">
+                    <div class="player-2-name text-2xl lg:text-3xl font-light uppercase">
+                        Player 2
+
+                    </div>
+                    <div class="global-score-1 text-4xl lg:text-7xl font-thin mt-2 lg:mt-4 text-red-600">82</div>
+                    <div class="current-score-1 flex flex-col items-center bg-red-600 rounded-sm px-6 py-2 mt-6 lg:mt-20">
+                        <div class="title text-gray-800 text-sm">Current</div>
+                        <div class="score text-gray-100 text-2xl">10</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- new game -->
+            <div class="new-game">
+                <svg class="inline-block w-5 h-5 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+                </svg>
+                <span class="">New game</span>
+                <audio src="/sounds/new.mp3" id="new-audio"></audio>
+            </div>
+
+            <!-- read rules -->
+            <div class="read-rules">
+                <svg class="inline-block w-5 h-5 mr-1"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                  </svg>
+                <span class="">Read rules</span>
+            </div>
+
+            <!-- dice -->
+            <div class="absolute w-14 h-14 lg:w-20 lg:h-20" id="dice">
+                <img src="/img/dice-1.svg" alt="Dice" id="diceImg">
+                <audio src="/sounds/dice.mp3" id="dice-audio"></audio>
+                <audio src="/sounds/win.mp3" id="win-audio"></audio>
+            </div>
+
+            <!-- roll dice -->
+            <div class="roll-dice w-42">
+                <svg class="inline-block w-5 h-5 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd" />
+                </svg>
+                <span class="">Roll dice</span>
+            </div>
+
+            <!-- save score -->
+            <div class="save-score  w-42">
+                <svg class="inline-block w-5 h-5 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M7.707 10.293a1 1 0 10-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 11.586V6h5a2 2 0 012 2v7a2 2 0 01-2 2H4a2 2 0 01-2-2V8a2 2 0 012-2h5v5.586l-1.293-1.293zM9 4a1 1 0 012 0v2H9V4z" />
+                </svg>
+                <span class="">save & pass</span>
+            </div>
+        </div>
+
+        <!-- rules modal -->
+        <div id="rules-modal" class="fixed top-0 left-0 z-50 w-full h-screen overflow-auto bg-blue-500 bg-opacity-20 hidden">
+            <div class="relative p-8 bg-gray-50 w-5/6 md:w-1/2 h-4/5 md:h-auto m-auto flex-col flex">
+                <span class="absolute top-0 right-0 p-4">
+                    <svg id="close-btn" class="h-8 w-8 fill-current text-gray-500 hover:text-gray-900" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        <title>Close</title>
+                        <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
+                    </svg>
+                </span>
+                <div class="overflow-auto">
+                    <h1 class="text-red-500 text-2xl text-center uppercase">Pig Game Rules</h1>
+                    <hr class="my-2">
+                    <ol class="text-gray-600 list-decimal list-inside space-y-2">
+                        <li>The game has 2 players, playing in rounds</li>
+                        <li>In each turn, a player rolls a dice as many times as he whishes. Each result get added to his ROUND score</li>
+                        <li>BUT, if the player rolls a 1, all his ROUND score gets lost. After that, it's the next player's turn</li>
+                        <li>The player can choose to 'Hold', which means that his ROUND score gets added to his GLBAL score. After that, it's the next player's turn</li>
+                        <li>The first player to reach 100 points on GLOBAL score wins the game</li>
+                    </ol>
+                </div>
+            </div>
+        </div> -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
