Fix asset links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
                 </svg>
                 <span class="">New game</span>
-                <audio src="/public/sounds/new.mp3" id="new-audio"></audio>
+                <audio src="/sounds/new.mp3" id="new-audio"></audio>
             </div>
 
             <!-- read rules -->
@@ -60,9 +60,9 @@
 
             <!-- dice -->
             <div class="absolute w-14 h-14 lg:w-20 lg:h-20" id="dice">
-                <img src="/public/img/dice-1.svg" alt="Dice" id="diceImg">
-                <audio src="/public/sounds/dice.mp3" id="dice-audio"></audio>
-                <audio src="/public/sounds/win.mp3" id="win-audio"></audio>
+                <img src="/img/dice-1.svg" alt="Dice" id="diceImg">
+                <audio src="/sounds/dice.mp3" id="dice-audio"></audio>
+                <audio src="/sounds/win.mp3" id="win-audio"></audio>
             </div>
 
             <!-- roll dice -->
@@ -103,7 +103,7 @@
                     </ol>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
