--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="bg-gray-500 w-11/12 h-5/6 lg:w-2/3 lg:h-5/6 flex flex-col lg:flex-row">
 
                 <!-- player 1's section-->
-                <div class="player-section" id="player-0">
+                <div class="player-section bg-red-200" id="player-0">
                     <div class="player-1-name text-2xl lg:text-3xl font-light uppercase">
                         Player 1
 
