--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         Player 1
 
                     </div>
+                    <div class="italic">Games won : <span class="win-count-1 text-blue-500">3</span></div>
 
                     <div class="global-score-0 text-4xl lg:text-7xl font-thin mt-2 lg:mt-4 text-blue-600">58</div>
 
@@ -33,6 +34,9 @@
                         Player 2
 
                     </div>
+                    <div class="italic">Games won : <span class="win-count-2 text-red-500">3</span></div>
+
+
                     <div class="global-score-1 text-4xl lg:text-7xl font-thin mt-2 lg:mt-4 text-red-600">82</div>
                     <div class="current-score-1 flex flex-col items-center bg-red-600 rounded-sm px-6 py-2 mt-6 lg:mt-20">
                         <div class="title text-gray-800 text-sm">Current</div>
